Imlplement templating to parse env vars. mask.toml is changed to mask.config

--- a/githooks/templates/mask.config
+++ b/githooks/templates/mask.config
@@ -1,6 +1,8 @@
 [show]
 12345678 = 4
 asdirDkjcEDDcllsl = 0
+{{ ENV_VAR_1 }} = 5
+{{ ENV_VAR_2 }} = 0
 
 [ignore]
 files=["ignoreme.html", "ignoreme2.html"]
